--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,18 @@ body {
 
 .navbar-brand {
     letter-spacing: .4em;
-    text-transform: uppercase;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-   padding: 1.5rem;
 }
 
 .nav-link {
-    font-weight: 600;
+    font-weight: 400;
     font-size: 1.3em;
+}
+
+
+.bl-cyan {
+    border-left: 2px solid #64f8ff;
+}
+
+.pt-10 {
+    padding-top: 10rem;
 }
